resolved all issues from new generated code
